--- a/nginx/ui/src/styles/layout.scss
+++ b/nginx/ui/src/styles/layout.scss
@@ -1,4 +1,4 @@
-$menu-height: 4rem;
+@import "./vars.scss";
 
 body {
     margin: 0;
