--- a/nginx/ui/src/styles/vars.scss
+++ b/nginx/ui/src/styles/vars.scss
@@ -1,2 +1,6 @@
+// colours
 $hover-colour: lightcyan;
 $highlight-colour: lighten(lightgrey, 10%);
+
+// sizes
+$menu-height: 4rem;
